--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*::after,
+::before {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: "Varela", sans-serif;
+}
+
+:root {
+  --header-primary-color: #002877ff;
+  --header-secundary-color: #1274f6ff;
+
+  --bg-landing-page-primary-color: #f6f6f6ff;
+  --bg-landing-page-secundary-color: #ffffff;
+}
+
+.logo_container {
+  box-shadow: rgba(0, 0, 0, 0.28) 0px 0px 5px 0px;
+  background: border-box rgb(0, 40, 119);
+}
+
+.imageHeader::before {
+  position: absolute;
+  content: "";
+  display: block;
+  inset: 0px;
+  background-image: url("./assets/photo-1497032628192-86f99bcd76bc.webp");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  opacity: 0.39;
+}
